Fix relative URLs in 'pluginspage' attribute honor BASE tag bug 46405 a=av, sr=buster